fix overflow problem

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -69,6 +69,7 @@
 body {
   background: #ffffff;
   font-family: 'Montserrat', sans-serif;
+  overflow-x: hidden; 
 }
 
 li {
